2004-06-07 22:50  sisoft

	* Changes, Makefile.am, README, autogen.sh, configure.in,
	  qico.spec, debian/Makefile.am, debian/changelog, src/Makefile.am,
	  src/binkp.c, src/daemon.c, src/log.c, src/main.c, src/perl.c,
	  src/qconf.x, stuff/test.pl, stuff/freebsd/Makefile:

	change version to 0.55si.
	release 0.54si (cvs tag - stbl54).
	add 'make deb' target for make debian packages.
	begin write perl support code.
	add configure option --enable-perl and keyword 'perlfile'.

2004-06-05 10:49  sisoft

	* Changes, qico.conf.sample, src/aso.c, src/config.c, src/daemon.c,
	  src/emsi.c, src/flagexp.y, src/flaglex.l, src/ftn.c, src/ftn.h,
	  src/hydra.c, src/ls_zmodem.c, src/protfm.c, src/qcc.c,
	  src/qipc.c, src/qipc.h, src/tools.c, src/tools.h, src/tty.h:

	fix sending *.req if ASO used.
	add if-expressions 'mailer' and 'exec'.
	other small changes.

2004-06-05 04:15  sisoft

	* Changes, src/config.c, src/protfm.c, src/qcc.c:

	fix <if>-expressions parsing.

2004-06-03 06:01  sisoft

	* src/: daemon.c, protfm.c, qslib.c:

	fix compile without binkp.

2004-06-02 17:20  sisoft

	* Changes, cvs_com, qico.conf.sample, debian/qcc.8, debian/qctl.8,
	  src/config.c, src/daemon.c, src/modem.c:

	fix multiline defines in config.
	add support for change if--endif to {--} blocks (see conf.sample).

2004-06-01 05:14  sisoft

	* src/: qslib.c, qslib.h:

	add files qslib.[ch].
	add support for recursive <if>-expressions and conditional includes.

2004-06-01 05:12  sisoft

	* Changes, src/config.c, src/flagexp.y, src/tools.h:

	add support for recursive <if>-expressions and conditional includes.

2004-05-31 17:19  sisoft

	* src/: Makefile.am, byteop.h, gmtoff.c, headers.h, qcc.c, qctl.c,
	  ver.c.in, ver.h, xmem.c, xmem.h, xstr.c, xstr.h:

	manage files.

2004-05-31 17:15  sisoft

	* Changes, configure.in, debian/qcc.8, debian/qctl.8,
	  src/Makefile.am, src/byteop.h, src/defs.h, src/ftn.c,
	  src/gmtoff.c, src/headers.h, src/log.c, src/main.c, src/modem.c,