@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-08 15:08";
+char cvsdate[]="2004-06-10 02:24";
