@@ -1,6 +1,6 @@
 /**********************************************************
  * expression parser
- * $Id: flagexp.y,v 1.14 2004/06/05 06:49:13 sisoft Exp $
+ * $Id: flagexp.y,v 1.15 2004/06/09 22:25:50 sisoft Exp $
  **********************************************************/
 %token DATE DATESTR GAPSTR ITIME NUMBER PHSTR TIMESTR ADDRSTR IDENT 
 %token CONNSTR SPEED CONNECT PHONE MAILER TIME ADDRESS FLEXEC FLLINE
@@ -24,16 +24,16 @@ int yylex();
 int flxpres;
 
 static int logic(int e1, int op,int e2);
-static int checkconnstr(void);
+static int checkconnstr();
 static int checkspeed(int op, int speed, int real);
 static int checksfree(int op,int sp);
-static int checkmailer(void);
-static int checkphone(void);
-static int checkport(void);
-static int checkcid(void);
-static int checkhost(void);
-static int checkfile(void);
-static int checkexec(void);
+static int checkmailer();
+static int checkphone();
+static int checkport();
+static int checkcid();
+static int checkhost();
+static int checkfile();
+static int checkexec();
 static int checkline(int lnum);
 static int yyerror(char *s);
 extern char *yyPTR;
@@ -124,7 +124,7 @@ static int logic(int e1, int op,int e2)
 	}
 }
 
-static int checkconnstr(void)
+static int checkconnstr()
 {
 	DEBUG(('Y',2,"checkconnstr: \"%s\"",yytext));
 	if(!connstr||is_ip) return 0;
@@ -176,7 +176,7 @@ static int checksfree(int op,int sf)
 	}
 }
 
-static int checkphone(void)
+static int checkphone()
 {
 	DEBUG(('Y',2,"checkphone: \"%s\"",yytext));
 	if(!rnode||!rnode->phone) return 0;
@@ -185,7 +185,7 @@ static int checkphone(void)
 	return 0;
 }
 
-static int checkmailer(void)
+static int checkmailer()
 {
 	DEBUG(('Y',2,"checkmailer: \"%s\"",yytext));
 	if(!rnode||!rnode->mailer) return 0;
@@ -194,7 +194,7 @@ static int checkmailer(void)
 	return 0;
 }
 
-static int checkcid(void)
+static int checkcid()
 {
 	char *cid = getenv("CALLER_ID");
 	if(!cid||strlen(cid)<4) cid = "none";
@@ -203,7 +203,7 @@ static int checkcid(void)
 	return 0;
 }
 
-static int checkhost(void)
+static int checkhost()
 {
 	DEBUG(('Y',2,"checkhost: \"%s\"",yytext));
 	if(!rnode || !rnode->host) return 0;
@@ -212,7 +212,7 @@ static int checkhost(void)
 	return 0;
 }
 
-static int checkport(void)
+static int checkport()
 {
 	DEBUG(('Y',2,"checkport: \"%s\"",yytext));
 	if(!rnode || !rnode->tty) return 0;
@@ -221,7 +221,7 @@ static int checkport(void)
 	return 0;
 }
 
-static int checkfile(void)
+static int checkfile()
 {
 	struct stat sb;
 	DEBUG(('Y',2,"checkfile: \"%s\" -> %d",yytext,!stat(yytext,&sb)));
@@ -229,7 +229,7 @@ static int checkfile(void)
 	return 0;
 }
 
-static int checkexec(void)
+static int checkexec()
 {
 	int rc;
 	char *cmd=xstrdup(yytext);
@@ -276,6 +276,6 @@ int flagexp(slist_t *expr,int strict)
 
 static int yyerror(char *s)
 {
-	DEBUG(('Y',1,"yyerror: %s",s));
+	DEBUG(('Y',1,"yyerror: %s at %s",s,(yytext&&*yytext)?yytext:"end of input"));
 	return 0;
 }
