@@ -1,6 +1,6 @@
 /**********************************************************
  * stuff
- * $Id: tools.c,v 1.15 2004/06/05 06:49:13 sisoft Exp $
+ * $Id: tools.c,v 1.16 2004/06/09 22:25:50 sisoft Exp $
  **********************************************************/
 #include "headers.h"
 #ifdef HAVE_SYS_MOUNT_H
@@ -27,7 +27,7 @@ char *sigs[]={"","HUP","INT","QUIT","ILL","TRAP","IOT","BUS","FPE",
 static int initcharset(char *name,unsigned char *tab)
 {
 	FILE *f;
-	int rev=0;
+	int rev=0,n;
 	unsigned i,c;
 	char buf[MAX_STRING];
 	if(!name||!strcasecmp(name,"none"))return -1;
@@ -49,11 +49,11 @@ static int initcharset(char *name,unsigned char *tab)
 		} else {
 			if(sscanf(buf,"%u %u",&i,&c)!=2)continue;
 		}
-		if(rev) { rev=i;i=c;c=rev; }
+		if(rev) { n=i;i=c;c=n; }
 		if(c>255||i<128||i>255)continue;
 		tab[i-128]=c;
 	}
-	for(rev=0;rev<128;rev++)if(!tab[rev])tab[rev]=rev+128;
+	for(n=0;n<128;n++)if(!tab[n])tab[n]=n+128;
 	fclose(f);
 	return 1;
 }
