@@ -1,11 +1,12 @@
 # test and info perl script for qicosi.
-# $Id: test.pl,v 1.2 2004/06/08 11:11:46 sisoft Exp $
+# $Id: test.pl,v 1.3 2004/06/09 22:25:50 sisoft Exp $
 
 # available qico functions:
 #  sub wlog(string): write string to log.
+#  sub setflag(num,bool): set user perl flag num to bool.
 
 # default commands (outside any subs), executig before on_load().
-$|=1;
+#use strict;
 
 # called for initialization.
 # %conf: hash of config values.
@@ -33,6 +34,7 @@ sub on_log {
     	s/poll/big hello/;
 	$rc=1;
     }
+    setflag(0,1) if(/\.log/);
     open F,">>/tmp/qlog";
     print F $_."\n" unless /DBG_/;
     close F;
